@@ -205,7 +205,9 @@
 							<onclick>SendClick(14)</onclick>
 							<visible>!SubString(Control.GetLabel(14),*)</visible>
                     	</item>
-                    	<item id="17">
+                    	
+                    	<!-- Removed for Gotham -->
+                    	<!--<item id="17">
                     		<description>Flatten Toggle</description>
                     		<icon>special://skin/extras/icons/no.png</icon>
 							<label>20411</label>
@@ -220,7 +222,8 @@
 							<onclick>SendClick(17)</onclick>
 							<icon>special://skin/extras/icons/yes.png</icon>
 							<visible>SubString(Control.GetLabel(17),*)</visible>
-                    	</item>
+                    	</item>-->
+                    	
                     </content>
                 </control>
                 <control type="grouplist" id="9222">
